syntax = "proto3";

package sqlstudio.auth;

option go_package = "github.com/sql-studio/backend-go/api/auth";

import "google/protobuf/timestamp.proto";

// Authentication service definition
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Verify(VerifyRequest) returns (VerifyResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

// Login request
message LoginRequest {
  string username = 1;
  string password = 2;
  bool remember_me = 3;
}

// Login response
message LoginResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp expires_at = 5;
  User user = 6;
}

// Verify token request
message VerifyRequest {
  string token = 1;
}

// Verify token response
message VerifyResponse {
  bool valid = 1;
  string message = 2;
  User user = 3;
  google.protobuf.Timestamp expires_at = 4;
}

// Logout request
message LogoutRequest {
  string token = 1;
}

// Logout response
message LogoutResponse {
  bool success = 1;
  string message = 2;
}

// Get profile request
message GetProfileRequest {
  string token = 1;
}

// Get profile response
message GetProfileResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// Refresh token request
message RefreshTokenRequest {
  string refresh_token = 1;
}

// Refresh token response
message RefreshTokenResponse {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp expires_at = 5;
}

// User definition
message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool active = 7;
  map<string, string> metadata = 8;
}